[package]
name = "erc20"
version = "3.0.0-rc3"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
ink_primitives = { git = "https://github.com/paritytech/ink", rev = "8e8fe09565ca6d2fad7701d68ff13f12deda7eed", default-features = false }
ink_metadata = { git = "https://github.com/paritytech/ink", rev = "8e8fe09565ca6d2fad7701d68ff13f12deda7eed", default-features = false, features = ["derive"], optional = true }
ink_env = { git = "https://github.com/paritytech/ink", rev = "8e8fe09565ca6d2fad7701d68ff13f12deda7eed", default-features = false }
ink_storage = { git = "https://github.com/paritytech/ink", rev = "8e8fe09565ca6d2fad7701d68ff13f12deda7eed", default-features = false }
ink_lang = { git = "https://github.com/paritytech/ink", rev = "8e8fe09565ca6d2fad7701d68ff13f12deda7eed", default-features = false }
ink_prelude = { git = "https://github.com/paritytech/ink", rev = "8e8fe09565ca6d2fad7701d68ff13f12deda7eed", default-features = false }

scale = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"] }
scale-info = { version = "0.4", default-features = false, features = ["derive"], optional = true }

# Should be removed once bitvecto-rs/bitvec#105 is resolved
funty = "=1.1.0"

[lib]
name = "erc20"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
]
ink-as-dependency = []